# agit

./: CHANGELOG.md  LICENSE.txt  README.md  README.pypi.md  agit_demo_lq.mov  pyproject.toml
.github/workflows/: black.yml  python-package-main.yml  python-package.yml
agit/: config.py  grammar.py  logger.py  main.py  openai_api.py  os_iface.py  rag.py  security.py  selfdocument.py  util.py
tests/: config.py  test_main.py  test_openai_api.py  test_os_iface.py  test_security.py
