[tool.poetry]
name = "agit"
version = "0.1.0"
description = ""
authors = ["Sivan Grünberg <sivan@vitakka.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
requests = "^2.31.0"
pydantic = "^2.0.3"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
autopage = "^0.5.1"

[tool.poetry.scripts]
agit = "agit.main:async_main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
